--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ button {
     position: absolute;
     top: 20px;
     right: 20px;
-    color: black;
+    color: rgb(227, 219, 65);
 }
 
 #timer {
